Complete java import fix

Previous fix was not enough to fix this bug. Importing
exchange/tree/master/network/src/main/java/io/bisq/network from
https://github.com/bisq-network/ not works.

BUG:386479
FIXED-IN:2.24.1 (KDE Applications 17.12.1)